# awfulgame

./: .gitignore  CMakeLists.txt  README.md
res/levels/: default.level
res/shaders/fragment/: blur.glsl
src/: main.cpp
src/entity/: AnimatedEntity.cpp  AnimatedEntity.h  BaseEntity.cpp  BaseEntity.h  PlayerEntity.cpp  PlayerEntity.h
src/level/: Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h
src/registries/: CommandRegistry.h  MusicRegistry.h  Registry.h  ShaderRegistry.h  SoundRegistry.h  TextureRegistry.h
src/resources/: TilesetLoader.cpp  TilesetLoader.h
src/util/: Arguments.h  Benchmarking.cpp  Benchmarking.h  Constants.h  Direction.h  Forward.h  Point.h  State.h  Time.h
